added randomizing word generator

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <p id="catagoryName"></p>
 
-        <div id="hold"> </div>
+        <div id="holder"> </div>
 
         <p id="mylives"></p>
 
