finished writing functions, debugging now

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
         <div id="holder"> </div>
 
-        <p id="mylives"></p>
+        <p id="myLives"></p>
 
         <p id="clue"> </p>
 
         <div class="container">
             <button id="hint">Hint</button>
-            <button id="reset">Play again</button>
+            <button id="gameReset">Play again</button>
         </div>
     </div>
 </body>
