--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
         <div id="buttons"> </div>
 
-        <p id="catagoryName"></p>
+        <p id="categoryName"></p>
 
         <div id="holder"> </div>
 
