fixed play again button with reload function, styled css better

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 
         <div id="holder"> </div>
 
+        <p id="message">You have</p>
+
         <p id="myLives"></p>
+
+        <p id="message">guesses remaining</p>
 
         <p id="clue"> </p>
 
